# Artemis

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.md  PRODUCTION_PROMPT.md  README.md  TODO.md  a.out  fix_migration.py  install.ps1  install.sh  migrate_self.py  output.ll  qualify_stdlib_tests.py  test_err.txt  test_out.txt  wrap_namespaces.py
.cache/clangd/index/: aciso.hxx.03D3BBAD2C423DEE.idx  analyzer.hxx.3D66BC09A7047E95.idx  asm.hxx.B78727A10B5AF845.idx  cmd_build.cxx.DE2538BA0FFA4246.idx  cmd_dev.cxx.3694FCB7C00FC15A.idx  cmd_export.cxx.C0ACC06810754469.idx  cmd_init.cxx.3A2813E8CDB14F53.idx  cmd_pkg.cxx.46F91DF704290F2A.idx  cmd_symbols.cxx.CF271DBB08B8D4A8.idx  cmd_targets.cxx.1A2E603B12A08E3E.idx  config.hxx.FF8F32890F83B6A0.idx  context.hxx.094EEA13495E49BA.idx  decls.hxx.795D8F9462723A4E.idx  diagnostics.hxx.7A2952C2614CC0FC.idx  expr.hxx.FBA0F72314A1D8FB.idx  exprs.hxx.FC84919FB9EB7567.idx  framework.hxx.5C253CE07AFA2FB1.idx  hash.hxx.435523D77B98FCF6.idx  include.h.69B01816C480CE1C.idx  integration.hxx.F0CE672209CEB5C6.idx  json.hxx.5A7526043A4EE0CB.idx  main.cpp.D88E650A166CED0B.idx  main.cxx.4988A6968BCC1164.idx  main.hxx.629905081F3C6B07.idx  main.hxx.66AF687E28790305.idx  main.hxx.CEBFAA4A4DD3A18E.idx  main.hxx.E013846DCEF4D7E8.idx  main.hxx.FF51CE1DE629AF9E.idx  names.hxx.46357CD67A3EE751.idx  runner.cpp.DA6D407A17287135.idx  scope.hxx.39A71BEB676936B6.idx  stmts.hxx.0B2564BF0848CFC8.idx  test_analyzer.hxx.43BAFEDB28DDBD11.idx  test_ir.hxx.6432ECC55335B359.idx  test_lexer.hxx.E2B4C1C924307AB1.idx  test_parser.hxx.F012AD8C9D6E0B78.idx  toml.hxx.291A192CAC466664.idx  types.hxx.00F5AA1A43BF34C9.idx  types.hxx.3F62AD9C71E34465.idx
.github/workflows/: ci.yml
aciso/: aciso.hxx  cmd_build.cxx  cmd_dev.cxx  cmd_export.cxx  cmd_init.cxx  cmd_pkg.cxx  cmd_symbols.cxx  cmd_targets.cxx  config.hxx  hash.hxx  main.cxx  toml.hxx
cmake/toolchains/: linux-x86_64.cmake  macos-x86_64.cmake  windows-x86_64.cmake
compiler/: diagnostics.hxx
compiler/analysis/: analyzer.hxx  main.hxx  scope.hxx  types.hxx
compiler/ir/: asm.hxx  context.hxx  decls.hxx  exprs.hxx  handle.hxx  include.h  main.hxx  names.hxx  stmts.hxx  types.hxx
compiler/lexer/: main.hxx
compiler/parser/: expr.hxx  main.hxx
compiler/preproc/: main.hxx
compiler/std/: README.md
compiler/std/include/: atomic.arc  debug.arc  dll.arc  encode.arc  fmt.arc  fs.arc  hash.arc  json.arc  map.arc  math.arc  net.arc  process.arc  rand.arc  set.arc  sll.arc  soa.arc  test.arc  thread.arc  toml.arc  unordered_map.arc  unordered_set.arc  vector.arc
compiler/std/include/alloc/: arena.arc  bump.arc  free_list.arc  pool.arc  ring.arc  slab.arc
compiler/std/include/arch/: simd.arc  system.arc
docs/: CHANGELOG.md  TODO.md  spec.md
docs/main/: 00_index.md  01_introduction.md  02_getting_started.md  03_types.md  04_variables.md  05_functions.md  06_control_flow.md  07_pointers.md  08_arrays.md  09_structs_unions_enums.md  10_istruc.md  11_generics.md  12_namespaces.md  13_memory.md  14_operators.md  15_asm.md  16_c_interop.md  17_preprocessor.md  18_comptime.md  19_function_pointers.md  20_defer.md  21_build_system.md  22_package_manager.md  23_reference.md
src/: main.cpp
tcon/: run.cc  run_fail.cc  run_std.cc
tcon/fail/: 001_private_field.arc  002_private_method.arc  003_protected_unrelated.arc  004_protected_global.arc  005_member_nonexistent.arc  006_unknown_type.arc  007_break_outside_loop.arc  008_continue_outside_loop.arc  009_undefined_variable.arc  010_unknown_base_class.arc  011_override_no_base.arc  012_mandatory_no_virtual.arc  013_construct_without_consteval.arc  014_construct_implicit_then_explicit.arc  015_member_nonexistent_struct.arc  016_call_non_function.arc  017_break_in_function_body.arc  018_redeclare_var_same_scope.arc  019_redefine_function.arc  020_too_few_args.arc  021_too_many_args.arc  022_call_undeclared_function.arc  023_private_in_derived.arc  024_protected_non_derived.arc  025_base_private_in_derived_method.arc  026_method_not_found.arc  027_unknown_return_type.arc  028_unknown_param_type.arc  029_unknown_field_type.arc  030_unknown_base_istruc.arc  031_mandatory_virtual_missing_virtual.arc  032_override_no_base_class.arc  033_redeclare_istruc.arc  034_undeclared_in_expr.arc  035_undeclared_in_condition.arc  036_undeclared_in_return.arc  037_undeclared_in_while.arc  038_break_in_plain_block.arc  039_continue_in_plain_block.arc  040_use_after_scope.arc  (+73 more)
tcon/std/: 001_alloc_bump.arc  002_alloc_arena.arc  003_alloc_pool.arc  004_alloc_ring.arc  005_alloc_free_list.arc  006_alloc_slab.arc  007_memstr_type_check.arc  008_math_basic.arc  009_rand_basic.arc  010_hash_fnv.arc  011_hash_wyhash.arc  012_hash_sha256.arc  013_atomic_basic.arc  014_fmt_print.arc  015_fmt_str.arc  016_fs_basic.arc  017_debug_poison.arc  018_encode_utf8.arc  019_test_framework.arc
tcon/test/: 002_i32_arithmetic.arc  003_i64_arithmetic.arc  004_u32_arithmetic.arc  005_i8_range.arc  006_u8_arithmetic.arc  007_i16_arithmetic.arc  008_f32_arithmetic.arc  009_f64_arithmetic.arc  010_bool_type.arc  011_int_alias.arc  012_bitwise_and.arc  013_bitwise_or.arc  014_bitwise_xor.arc  015_bitwise_not.arc  016_shift_left.arc  017_shift_right.arc  018_logical_and.arc  019_logical_or.arc  020_logical_not.arc  021_comparisons.arc  022_compound_assign.arc  023_prefix_incr_decr.arc  024_postfix_incr_decr.arc  025_ternary.arc  026_if_else.arc  027_if_elseif_chain.arc  028_while_loop.arc  029_while_break.arc  030_while_continue.arc  031_for_loop.arc  032_for_break.arc  033_for_continue.arc  034_nested_loops.arc  035_switch_basic.arc  036_switch_fallthrough.arc  037_switch_break.arc  038_function_call.arc  039_multi_param_func.arc  040_recursion_fib.arc  041_recursion_factorial.arc  (+161 more)
tcon/test/inc/: embed_code.inc  helper.inc  use_define.inc
test/: framework.hxx  integration.hxx  read.h  runner.cpp  test.h  test_analyzer.hxx  test_ir.hxx  test_lexer.hxx  test_parser.hxx
test/master/: generator.c
test/master/test/: base.arc  try.arc
